fixed description of under/over fit in reg1 to match clsfcn

--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -1006,8 +1006,8 @@ visualizes the accuracy as a function of the number of predictors in the model. 
 as meaningful predictors are added, the estimated accuracy increases substantially; and as you add irrelevant
 variables, the accuracy either exhibits small fluctuations or decreases as the model attempts to tune the number
 of neighbours to account for the extra noise. In order to pick the right model from the sequence, you have 
-to trade off the desiderata to have a high accuracy, but also a simple model with few predictors (which has a 
-lower variance and less chance of overfitting). The way to perform that trade-off is to look for the *elbow*
+to trade off the desiderata to have a high accuracy, but also a simple model with few predictors (which has 
+a lower chance of overfitting). The way to perform that trade-off is to look for the *elbow*
 in Figure \@ref(fig:06-fwdsel-3), i.e., the place on the plot where the accuracy stops increasing dramatically and
 levels off or begins to decrease. The elbow in Figure \@ref(fig:06-fwdsel-3) appears to occur at the model with 
 3 predictors; after that point the accuracy levels off. So here the right trade-off of accuracy and number of predictors
