defined acronym in overview as it was a bit strange how we used the long form, and then switched to the short form without defining it. cc @trevorcampbell.

--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -2,7 +2,7 @@
 
 ## Overview 
 Up until this point, we have solved all of our predictive problems---both classification
-and regression---using K-nearest neighbours-based approaches. But while K-NN methods are 
+and regression---using K-nearest neighbours (K-NN)-based approaches. But while K-NN methods are 
 simple and flexible, in the context of regression, there is another method (generally more popular in
 most scientific disciplines) known as *linear regression*. This chapter provides an introduction
 to the basic concept of linear regression, shows how to use `tidymodels` to perform linear regression in R,
