--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -79,7 +79,7 @@ Note that proportions are not the *only* kind of population parameter we might b
 
 *What is the average price-per-month of studio apartment rentals in Vancouver, Canada?*
 
-The population consists of all studio apartment rentals in Vancouver, and the population parameter is the *average price-per-month*. Here we used the average as a measure of center to describe the "typical value" of studio apartment rental prices. But even within this one example, we could also be interested in many other population parameters. For instance, we know that not every studio apartment rental in Vancouver will have the same price-per-month. The student might be interested in how much monthly prices vary and want to find a measure of the rentals' spread (or variability), such as the standard deviation. We might be interested in the fraction of studio apartment rentals that cost more than \$1000 per month. And the list of population parameters we might want to calculate goes on. The question we want to answer will help us determine the parameter we want to estimate. If we were somehow able to observe the whole population of studio apartment rental offerings in Vancouver, we could compute each of these numbers exactly; therefore, these are all population parameters. There are many kinds of observations and population parameters that you will run into in practice, but in this chapter, we will focus on two settings:
+The population consists of all studio apartment rentals in Vancouver, and the population parameter is the *average price-per-month*. Here we used the average as a measure of center to describe the "typical value" of studio apartment rental prices. But even within this one example, we could also be interested in many other population parameters. For instance, we know that not every studio apartment rental in Vancouver will have the same price-per-month. The student might be interested in how much monthly prices vary and want to find a measure of the rentals' spread (or variability), such as the standard deviation. We might be interested in the fraction of studio apartment rentals that cost more than \$1000 per month. The question we want to answer will help us determine the parameter we want to estimate. If we were somehow able to observe the whole population of studio apartment rental offerings in Vancouver, we could compute each of these numbers exactly; therefore, these are all population parameters. There are many kinds of observations and population parameters that you will run into in practice, but in this chapter, we will focus on two settings:
 
 1. Using categorical observations to estimate the proportion of each category
 2. Using quantitative observations to estimate the average (or mean)
@@ -87,7 +87,7 @@ The population consists of all studio apartment rentals in Vancouver, and the po
 ## Sampling distributions
 
 ### Sampling distributions for proportions
-We will look at an example using data from [Inside Airbnb](http://insideAirbnb.com/). Airbnb is an online marketplace for arranging places to stay. The data set, `airbnb`, contains listings for Vancouver, Canada, in September 2020. Our data includes an ID number, neighbourhood, type of room, the number of people the rental accommodates, number of bathrooms, bedrooms, beds, and the price per night. 
+We will look at an example using data from [Inside Airbnb](http://insideAirbnb.com/). Airbnb is an online marketplace for arranging vacation rentals and places to stay. The data set, `airbnb`, contains listings for Vancouver, Canada, in September 2020. Our data includes an ID number, neighbourhood, type of room, the number of people the rental accommodates, number of bathrooms, bedrooms, beds, and the price per night. 
 
 ```{r 11-example-means1, echo = FALSE, message = FALSE, warning = FALSE}
 airbnb <- read_csv("data/listings.csv") %>%
@@ -98,14 +98,11 @@ airbnb <- airbnb %>%
   mutate(id = 1:nrow(airbnb))
 ```
 
-```{r 11-vancouver-city, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Vancouver, BC Canada", fig.retina = 2, out.width="880"}
-knitr::include_graphics("https://upload.wikimedia.org/wikipedia/commons/7/76/Vancouver_City_2_by_ajithrajeswari.jpg")
-```
 
 ```{r}
 airbnb
 ```
-Suppose the city of Vancouver wants to know how many Airbnb places are listed as entire homes and apartments (rather than as private or shared rooms). Therefore they may want to estimate the true proportion of all Airbnb listings where the "type of place" is listed as "entire home or apartment." Of course, we usually do not have access to the true population, but here let's imagine (for learning purposes) that our data set represents the population of all Airbnb rental listings in Vancouver, Canada. We can find the proportion of listings where `room_type == "Entire home/apt"`.
+Suppose the city of Vancouver wants to know how many Airbnb places are listed as entire homes and apartments (rather than as private or shared rooms) to help them inform city bylaws. They may Therefore they may want to estimate the true proportion of all Airbnb listings where the "type of place" is listed as "entire home or apartment." Of course, we usually do not have access to the true population, but here let's imagine (for learning purposes) that our data set represents the population of all Airbnb rental listings in Vancouver, Canada. We can find the proportion of listings where `room_type == "Entire home/apt"`.
 
 ```{r 11-example-proportions2, echo = TRUE, message = FALSE, warning = FALSE }
 library(tidyverse)
@@ -127,9 +124,11 @@ population_proportion <- airbnb %>%
   pull()
 ```
 
-From our data, we can see that the proportion of `Entire home/apt` listings in the data set is `r round(population_proportion,3)`. This value, `r round(population_proportion,3)`, is the *population parameter*. Remember, this parameter value is usually unknown in real data analysis problems.
 
-What would happen if we were to randomly select 40 listings and count the number of entire home/apartment listings (*i.e.,* take a random sample of size 40 from our population)? Let's use R to simulate this using our `airbnb` population. We can do this using the `rep_sample_n` function from the `infer` package. The arguments of `rep_sample_n` are (1) the data frame (or tibble) to sample from, and (2) the size of the sample to take.
+
+From our data, we can see that the proportion of `Entire home/apt` listings in the data set is `r round(population_proportion,3)`. This value, `r round(population_proportion,3)`, is the *population parameter*. Remember, this parameter value is usually unknown in real data analysis problems. Therefore normally, we can't compute it. Perhaps instead, we can approximate it with a small number of data?
+
+Let's see what would happen if we were to randomly select 40 listings and count the number of entire home/apartment listings (*i.e.,* take a random sample of size 40 from our population). Let's use R to simulate this using our `airbnb` population. We can do this using the `rep_sample_n` function from the `infer` package. The arguments of `rep_sample_n` are (1) the data frame (or tibble) to sample from, and (2) the size of the sample to take.
 
 ```{r 11-example-proportions3, echo = TRUE, message = FALSE, warning = FALSE}
 set.seed(123)
@@ -140,13 +139,11 @@ airbnb_sample_1 <- summarize(sample_1,
 )
 airbnb_sample_1
 ```
-Here we see that the proportion of entire home/apartment listings in this random sample is
-`r round(airbnb_sample_1$prop,2)`. This value is our *estimate* &mdash; our best guess of our population parameter using this sample. Given that it is a single
-value that we are estimating, we often refer to it as a **point estimate**.
 
-Now imagine we took another random sample of 40 listings from the population. Do you
-think we would get the same proportion? Let's try sampling from the population
-again and see what happens. 
+Here we see that the proportion of entire home/apartment listings in this random sample is
+`r round(airbnb_sample_1$prop,2)`. Wow, that's close to our true population value! But remember, we just used a random sample of 40 so this value is our *estimate* &mdash; our best guess of our population parameter using this sample. Given that it is a single
+value that we are estimating, we often refer to it as a **point estimate**.
+The keyword there is *random* -- if we were to take another random sample of 40 listings from the population, we wouldn't get the same answer:
 
 ```{r 11-example-proportions4, echo = TRUE, message = FALSE, warning = FALSE}
 set.seed(1234)
@@ -158,10 +155,7 @@ airbnb_sample_2 <- summarize(sample_2,
 airbnb_sample_2
 ```
 
-Notice that we get a different value for our estimate this time. The
-proportion of entire home/apartment listings in this sample is `r round(airbnb_sample_2$prop, 3)`. 
-If we were to do this again, another random sample could also give a
-different result. Estimates vary from sample to sample 
+Confirmed! We get a different value for our estimate this time so that means that our point estimate might be unreliable! If we were to do this again, another random sample could also give a different result. Estimates vary from sample to sample 
 due to **sampling variability**. 
 
 But just how much should we expect the estimates of our random
@@ -172,7 +166,9 @@ visualize the distribution of sample proportions we calculate. The distribution
 of the estimate for all possible samples of a given size (which we commonly refer to as $n$) from a population is
 called a **sampling distribution**. The sampling distribution will help us see
 how much we would expect our sample proportions from this population to vary
-for samples of size 40. Below we again use the `rep_sample_n` to take samples
+for samples of size 40. 
+
+Below we again use the `rep_sample_n` to take samples
 of size 40 from our population of Airbnb listings, but we set the `reps` argument
 to specify the number of samples to take, here 20,000. We will use the function `tail()` to see the last few rows of our `samples` data frame.
 
@@ -184,7 +180,7 @@ tail(samples)
 
 Notice the column `replicate` indicates the replicate, or sample, with which each
 listing belongs. Since we took 20,000 samples of size 40, there are 20,000 replicates.
-Now that we have taken 20,000 samples, to create a sampling distribution of sample proportions for samples of size 40, we need to calculate the proportion of entire home/apartment listings for each sample, $\hat{p}_\text{entire home/apartment}$:
+Now that we have taken 20,000 samples, to create a sampling distribution of sample proportions for samples of size 40, we need to calculate the proportion of entire home/apartment listings for each sample:
 ```{r 11-example-proportions6, echo = TRUE, message = FALSE, warning = FALSE}
 sample_estimates <- samples %>%
   group_by(replicate) %>%
@@ -192,7 +188,9 @@ sample_estimates <- samples %>%
 sample_estimates
 tail(sample_estimates)
 ```
-Now that we have calculated the proportion of entire home/apartment listings for each sample, $\hat{p}_\text{entire home/apartment}$, we can visualize the sampling distribution of sample proportions for samples of size 40:
+
+We calculated the proportion of entire home/apartment listings for each sample to visualize the sampling distribution of sample proportions for samples of size 40. Remember, in the real world, since we don't have the population, we can't actually construct the sampling distribution, but in this example, we do have it so we can actually visualize it directly.
+
 ```{r 11-example-proportions7, echo = TRUE, message = FALSE, warning = FALSE,fig.cap = "Sampling distribution of the sample proportion for sample size 40", out.width = "60%"}
 sampling_distribution <- ggplot(sample_estimates, aes(x = sample_proportion)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey", bins = 12) +
@@ -210,7 +208,7 @@ the mean of the sample proportions.
 sample_estimates %>%
   summarise(mean = mean(sample_proportion))
 ```
-We notice that the sample proportions are centred around the population proportion value, `r round(mean(sample_estimates$sample_proportion), 3)`! In general, the mean of the distribution of $\hat{p}$ should be equal to $p$, which is good because that means the sample proportion is neither an overestimate nor an underestimate of the population proportion.
+We notice that the sample proportions are centred around the population proportion value, `r round(population_proportion,3)`! In general, the mean of the distribution of $\hat{p}$ should be equal to $p$, which is good because that means the sample proportion is neither an overestimate nor an underestimate of the population proportion.
 
 So what can we learn from this sampling distribution? This distribution tells us what we might expect from proportions from samples of size $40$ when our population proportion is `r round(population_proportion,3)`. In practice, we usually don't know the proportion of our population, but if we can use what we know about the sampling distribution, we can use it to make inferences about our population when we only have a single sample. 
 
@@ -272,10 +270,10 @@ Note that we usually cannot compute the estimate's accuracy in practice since we
 Also, recall from the previous section that the point estimate can vary; if we took another random sample from the population, our estimate's value might change. So then, did we just get lucky with our point estimate above?
 How much does our estimate vary across different samples of size 40 in this example? Again, since we have access to the population,
 we can take many samples and plot the **sampling distribution** of sample means for samples of size 40 to get a sense
-for this variation. In this case, we'll use 15,000 samples of size 40.
+for this variation. In this case, we'll use 20,000 samples of size 40.
 
 ```{r}
-samples <- rep_sample_n(airbnb, size = 40, reps = 15000)
+samples <- rep_sample_n(airbnb, size = 40, reps = 20000)
 samples
 ```
 
@@ -301,9 +299,12 @@ a good fraction of cases outside this range (i.e., where the point estimate
 was not close to the population parameter). So it does indeed look like we were quite lucky
 when we estimated the population mean 
 with only `r round(100*abs(estimates$sample_mean - population_parameters$pop_mean)/population_parameters$pop_mean, 1)`% error.
+
 Let's visualize the population
 distribution, distribution of the sample, and the sampling distribution on one 
-plot to compare them in Figure \@ref(fig:11-example-means5).
+plot to compare them in Figure \@ref(fig:11-example-means5). Comparing these three distributions, the centers of the distributions are all around the same price (around \$150). The
+original population distribution has a long right tail, and the sample distribution has a similar shape to that of the population distribution. However, the sampling distribution is not shaped like the population or sample distribution. Instead, it has a bell shape, and it has a lower spread than the population or sample distributions. The sample means vary less than the individual observations because there will be some high values and some small values in any random sample, which will keep the average from being too extreme. 
+
 <!---
 ```{r 11-example-means4.5}
 sample_estimates %>%
@@ -333,19 +334,19 @@ One way to improve a point estimate is to take a *larger* sample. To illustrate 
 
 ```{r 11-example-means6, echo = FALSE, message = FALSE, warning = FALSE}
 ## Sampling n = 20, 50, 100, 500
-sample_estimates_20 <- rep_sample_n(airbnb, size = 20, reps = 15000) %>%
+sample_estimates_20 <- rep_sample_n(airbnb, size = 20, reps = 20000) %>%
   group_by(replicate) %>%
   summarise(sample_mean = mean(price))
 
-sample_estimates_50 <- rep_sample_n(airbnb, size = 50, reps = 15000) %>%
+sample_estimates_50 <- rep_sample_n(airbnb, size = 50, reps = 20000) %>%
   group_by(replicate) %>%
   summarise(sample_mean = mean(price))
 
-sample_estimates_100 <- rep_sample_n(airbnb, size = 100, reps = 15000) %>%
+sample_estimates_100 <- rep_sample_n(airbnb, size = 100, reps = 20000) %>%
   group_by(replicate) %>%
   summarise(sample_mean = mean(price))
 
-sample_estimates_500 <- rep_sample_n(airbnb, size = 500, reps = 15000) %>%
+sample_estimates_500 <- rep_sample_n(airbnb, size = 500, reps = 20000) %>%
   group_by(replicate) %>%
   summarise(sample_mean = mean(price))
 
@@ -585,22 +586,22 @@ sampling with replacement from the original sample, so we don't end up with the
 same sample values again. We are trying to mimic drawing another sample from
 the population without actually having to do that.
 
-Let's now take 15,000 bootstrap samples from the original sample we drew from the
+Let's now take 20,000 bootstrap samples from the original sample we drew from the
 population (`one_sample`)  using `rep_sample_n` and calculate the means for
 each of those replicates. Recall that this assumes that `one_sample` *looks like*
 our original population; but since we do not have access to the population itself,
 this is often the best we can do.
 
 ```{r 11-bootstrapping4, echo = TRUE, message = FALSE, warning = FALSE}
-boot15000 <- one_sample %>%
-  rep_sample_n(size = 40, replace = TRUE, reps = 15000)
-boot15000
-tail(boot15000)
+boot20000 <- one_sample %>%
+  rep_sample_n(size = 40, replace = TRUE, reps = 20000)
+boot20000
+tail(boot20000)
 ```
 
 Let's take a look at histograms of the first six replicates of our bootstrap samples.
 ```{r 11-bootstrapping-six-bootstrap-samples, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Histograms of first six replicates of bootstrap samples"}
-six_bootstrap_samples <- boot15000 %>%
+six_bootstrap_samples <- boot20000 %>%
   filter(replicate <= 6)
 ggplot(six_bootstrap_samples, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
@@ -615,15 +616,15 @@ six_bootstrap_samples %>%
   summarize(mean = mean(price))
 ```
 
-We can see that the bootstrap sample distributions and the sample means are different. They are different because we are sampling *with replacement*. We will now calculate point estimates for our 15,000 bootstrap samples and generate a bootstrap distribution of our point estimates. The bootstrap distribution suggests how we might expect our point estimate to behave if we took another sample.
+We can see that the bootstrap sample distributions and the sample means are different. They are different because we are sampling *with replacement*. We will now calculate point estimates for our 20,000 bootstrap samples and generate a bootstrap distribution of our point estimates. The bootstrap distribution suggests how we might expect our point estimate to behave if we took another sample.
 
 ```{r 11-bootstrapping5, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means"}
-boot15000_means <- boot15000 %>%
+boot20000_means <- boot20000 %>%
   group_by(replicate) %>%
   summarize(mean = mean(price))
-boot15000_means
-tail(boot15000_means)
-boot_est_dist <- ggplot(boot15000_means, aes(x = mean)) +
+boot20000_means
+tail(boot20000_means)
+boot_est_dist <- ggplot(boot20000_means, aes(x = mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   xlab("Sample mean price per night ($)")
 boot_est_dist
@@ -633,7 +634,7 @@ Let's compare our bootstrap distribution with the true sampling distribution (ta
 
 ```{r 11-bootstrapping6, echo = F, message = FALSE, warning = FALSE, fig.cap = "Comparison of distribution of the bootstrap sample means and sampling distribution", out.height="50%"}
 
-samples <- rep_sample_n(airbnb, size = 40, reps = 15000)
+samples <- rep_sample_n(airbnb, size = 40, reps = 20000)
 
 sample_estimates <- samples %>%
   group_by(replicate) %>%
@@ -656,9 +657,9 @@ sampling_dist <- sampling_dist +
 annotated_boot_est_dist <- boot_est_dist +
   annotate("text",
     x = max_x(boot_est_dist), max_height, hjust = 1, vjust = 1,
-    label = paste("mean = ", round(mean(boot15000_means$mean), 2))
+    label = paste("mean = ", round(mean(boot20000_means$mean), 2))
   ) +
-  geom_vline(xintercept = mean(boot15000_means$mean), col = "red")
+  geom_vline(xintercept = mean(boot20000_means$mean), col = "red")
 
 grid.arrange(sampling_dist + xlim(min_x(sampling_dist), max_x(sampling_dist)) + ggtitle("Sampling distribution"),
   annotated_boot_est_dist + xlim(min_x(sampling_dist), max_x(boot_est_dist)) + ggtitle("Bootstrap distribution"),
@@ -666,7 +667,7 @@ grid.arrange(sampling_dist + xlim(min_x(sampling_dist), max_x(sampling_dist)) + 
 )
 ```
 
-There are two essential points that we can take away from Figure \@ref(fig:11-bootstrapping6). First, the shape and spread of the true sampling distribution and the bootstrap distribution are similar; the bootstrap distribution lets us get a sense of the point estimate's variability. The second important point is that the means of these two distributions are different. The sampling distribution is centred at \$`r round(mean(airbnb$price),2)`, the population mean value. However, the bootstrap distribution is centred at the original sample's mean price per night, \$`r round(mean(boot15000_means$mean), 2)`. Because we are resampling from the original sample repeatedly, we see that the bootstrap distribution is centred at the original sample's mean value (unlike the sampling distribution of the sample mean, which is centred at the population parameter value). Figure \@ref(fig:11-bootstrapping7) summarizes the bootstrapping process.
+There are two essential points that we can take away from Figure \@ref(fig:11-bootstrapping6). First, the shape and spread of the true sampling distribution and the bootstrap distribution are similar; the bootstrap distribution lets us get a sense of the point estimate's variability. The second important point is that the means of these two distributions are different. The sampling distribution is centred at \$`r round(mean(airbnb$price),2)`, the population mean value. However, the bootstrap distribution is centred at the original sample's mean price per night, \$`r round(mean(boot20000_means$mean), 2)`. Because we are resampling from the original sample repeatedly, we see that the bootstrap distribution is centred at the original sample's mean value (unlike the sampling distribution of the sample mean, which is centred at the population parameter value). Figure \@ref(fig:11-bootstrapping7) summarizes the bootstrapping process.
 
 The idea here is that we can use this distribution of bootstrap sample means to approximate the sampling distribution of the sample means when we only have one sample. Since the bootstrap distribution pretty well approximates the sampling distribution spread, we can use the bootstrap spread to help us develop a plausible range for our population parameter along with our estimate!
 
@@ -817,7 +818,7 @@ To calculate our 95\% percentile bootstrap confidence interval, we will do the f
 To do this in R, we can use the `quantile()` function:
 
 ```{r 11-bootstrapping8, echo = T, message = FALSE, warning = FALSE}
-bounds <- boot15000_means %>%
+bounds <- boot20000_means %>%
   select(mean) %>%
   pull() %>%
   quantile(c(0.025, 0.975))
