learning obj minor change reg2

--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -14,7 +14,8 @@ predictor.
 ## Chapter learning objectives 
 By the end of the chapter, students will be able to:
 
-* Perform linear regression in R using `tidymodels` and evaluate it on a test data set.
+* Use R and `tidymodels` to fit a linear regression model on training data.
+* Evaluate the linear regression model on test data.
 * Compare and contrast predictions obtained from K-nearest neighbour regression to those obtained using simple ordinary least squares regression from the same dataset.
 * In R, overlay regression lines from `geom_smooth` on a single plot. 
 
