--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -95,10 +95,10 @@ is fair, or perhaps how to set the price of a new listing.
 
 The scientific question guides our initial exploration: the columns in the
 data that we are interested in are `sqft` (house size, in livable square feet)
-and `price` (house price, in US dollars (USD)).  The first step is to visualize
+and `price` (house sale price, in US dollars (USD)).  The first step is to visualize
 the data as a scatter plot where we place the predictor/explanatory variable
 (house size) on the x-axis, and we place the target/response variable that we
-want to predict (price) on the y-axis.
+want to predict (sale price) on the y-axis.
 
 ```{r 07-edaRegr, message = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square footage)"}
 eda <- ggplot(sacramento, aes(x = sqft, y = price)) +
@@ -124,7 +124,7 @@ Much like in the case of classification, we can use a K-nearest
 neighbours-based approach in regression to make predictions. Let's take a small
 sample of the data above and walk through how K-nearest neighbours (knn) works
 in a regression context before we dive in to creating our model and assessing
-how well it predicts house price. This subsample is taken to allow us to
+how well it predicts house sale price. This subsample is taken to allow us to
 illustrate the mechanics of K-NN regression with a few data points; later in
 this chapter we will use all the data.
 
@@ -146,7 +146,7 @@ to this question by using the data we have to predict the sale price given the
 sale prices we have already observed. But in Figure \ref@(fig:07-small-eda-regr),
 you can see that we have no
 observations of a house of size *exactly* 2,000 square feet. How can we predict
-the price? 
+the sale price? 
 
 ```{r 07-small-eda-regr, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square footage) with vertical line indicating 2,000 square feet on x-axis"}
 small_plot <- ggplot(small_sacramento, aes(x = sqft, y = price)) +
@@ -160,7 +160,7 @@ small_plot
 
 We will employ the same intuition from the classification chapter, and use the
 neighbouring points to the new point of interest to suggest/predict what its
-price should be. For the example above, we find and label the 5 nearest
+sale price might be. For the example above, we find and label the 5 nearest
 neighbours to our observation of a house that is 2,000 square feet.
 
 ```{r 07-find-k3}
@@ -184,8 +184,8 @@ nn_plot
 Figure \@ref(fig:07-knn3-example) illustrates the difference between the house sizes
 of the 5 nearest neighbours (in terms of house size) to our new
 2,000 square-foot house of interest. Now that we have obtained these nearest neighbours, 
-we can use their values to predict a
-selling price for the new home.  Specifically, we can take the mean (or
+we can use their values to predict the
+sale price for the new home.  Specifically, we can take the mean (or
 average) of these 5 values as our predicted value, as illustrated by
 the red point in Figure \@ref(fig:07-predictedViz-knn).
 
@@ -333,7 +333,7 @@ sacr_tunek_plot
 ```
 
 Figure \@ref(fig:07-howK) visualizes the effect of different settings of $K$ on the
-regression model. Each plot shows the predicted values for house price from
+regression model. Each plot shows the predicted values for house sale price from
 our K-NN regression model for 6 different values for $K$: 1, 3, `r kmin`, 41, 250, and 932 (i.e., the entire dataset).
 For each model, we predict a price for every possible home size across the range of home sizes we
 observed in the data set (here 500 to 5,000 square feet) and we plot the
@@ -545,8 +545,8 @@ plot_pairs
 ```
 
 Figure \@ref(fig:07-ggpairs) shows that generally, as both house size and
-number of bedrooms increase, so does price. Does adding the number of bedrooms
-to our model improve our ability to predict house price? To answer that
+number of bedrooms increase, so does sale price. Does adding the number of bedrooms
+to our model improve our ability to predict price? To answer that
 question, we will have to estimate the test error for a K-NN regression
 model using house size and number of bedrooms, and then we can compare it to
 the test error for the model we previously came up with that only used house
