moving paragraphs around, rephrasing last paragraph, fixed formatting of words

--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -127,7 +127,7 @@ population_proportion <- airbnb %>%
 
 
 
-From our data, we can see that the proportion of `Entire home/apt` listings in the data set is `r round(population_proportion,3)`. This value, `r round(population_proportion,3)`, is the *population parameter*. Remember, this parameter value is usually unknown in real data analysis problems. Therefore normally, we can't compute it. Perhaps instead, we can approximate it with a small number of data?
+From our data, we can see that the proportion of `Entire home/apt` listings in the data set is `r round(population_proportion,3)`. This value, `r round(population_proportion,3)`, is the population parameter. Remember, this parameter value is usually unknown in real data analysis problems. Therefore normally, we can't compute it. Perhaps instead, we can approximate it with a small number of data?
 
 Let's see what would happen if we were to randomly select 40 listings and count the number of entire home/apartment listings (*i.e.,* take a random sample of size 40 from our population). Let's use R to simulate this using our `airbnb` population. We can do this using the `rep_sample_n` function from the `infer` package. The arguments of `rep_sample_n` are (1) the data frame (or tibble) to sample from, and (2) the size of the sample to take.
 
@@ -432,10 +432,10 @@ grid.arrange(annotated_sampling_dist_20,
 
 Based on the visualization in Figure \@ref(fig:11-example-means7), two points about the sample mean become clear.
 First, the
-mean of the sample mean (across samples) is equal to the population mean.
+mean of the sample mean (across samples) is equal to the population mean. In other words, 
+the sampling distribution is centred at the population mean.
 Second, increasing the size of the sample
-decreases the spread (i.e., the variability) in the sample mean
-point estimate of the population mean. Therefore, a larger sample size results
+decreases the spread (i.e., the variability) of the sampling distribution. Therefore, a larger sample size results
 in a more reliable point estimate of the population parameter.
 
 
@@ -450,12 +450,12 @@ in a more reliable point estimate of the population parameter.
 4. The spread of the sampling distribution is related to the sample size. As the sample size increases, the spread of the sampling distribution decreases. 
 5. The shape of the sampling distribution is usually bell-shaped with one peak and centred at the population mean or proportion.
 
+## Bootstrapping 
+### Overview 
+
 *Why all this emphasis on sampling distributions?*
 
 Usually, we don't have access to the population data, so we cannot construct the sampling distribution as we did in this section. As we saw, our sample estimate's value will likely not equal the population parameter value exactly. We saw from the sampling distribution just how much our estimates can vary. So reporting a single *point estimate* for the population parameter alone may not be enough. Using simulations, we can see patterns of the sample estimate's sampling distribution would look like for a sample of a given size. We can use these patterns to approximate the sampling distribution when we only have one sample, which is the realistic case. If we can "predict" what the sampling distribution would look like for a sample, we could construct a range of values we think the population parameter's value might lie. We can use our single sample and its properties that influence sampling distributions, such as the spread and sample size, to approximate the sampling distribution as best as we can. There are several methods to do this; however, in this book, we will use the bootstrap method to do this, as we will see in the next section.
-
-## Bootstrapping 
-### Overview 
 
 We saw in the previous section that we could compute a **point estimate** of a population
 parameter using a sample of observations from the population. And since we had access to the
@@ -849,7 +849,7 @@ Notice that our interval does indeed contain the true
 population mean value, \$`r round(mean(airbnb$price),2)`\! However, in
 practice, we would not know whether our interval captured the population parameter or not because we usually only have a single sample, not the entire population. However, this is the best we can do when we only have one sample!
 
-This chapter is only the beginning of the journey into statistical inference. We can extend the concepts learned here to do much more than report point estimates and confidence intervals, such as hypothesis testing for differences between populations, tests for associations between variables, and so much more! We have just scratched the surface of statistical inference; however, the material presented here will serve as the foundation for more advanced statistical techniques you may learn about in the future!
+This chapter is only the beginning of the journey into statistical inference. We can extend the concepts learned here to do much more than report point estimates and confidence intervals, such as testing for real differences between populations, tests for associations between variables, and so much more! We have just scratched the surface of statistical inference; however, the material presented here will serve as the foundation for more advanced statistical techniques you may learn about in the future!
 
 ## Additional resources
 
